--- a/lab_3/static/css/styles.css
+++ b/lab_3/static/css/styles.css
@@ -1,3 +1,34 @@
 body{
-    text-align:center;
+    font-size: 20px;
+}
+h1{
+    text-align: center;
+}
+
+.container{
+    background-color: antiquewhite;
+    width: 500px;
+    margin: 0 auto;
+}
+
+input, select, textarea{
+    font-size: inherit;
+}
+
+.form-group label{
+    display: block;
+    margin: 5px;
+    font-weight: bold;
+}
+
+.btn{
+    display: block;
+    height: 30px;
+    width: 150px;
+    background-color: blue;
+    color: white;
+    margin: 0 auto;
+    margin-top: 20px;
+    font-size: 20px;
+    border-radius: 10px;
 }
