--- a/exam/css/index.css
+++ b/exam/css/index.css
@@ -256,7 +256,7 @@ button{
 }
 
 .sec6{
-	padding-bottom: 50px;
+	padding-bottom: 100px;
 }
 
 .price {
@@ -273,4 +273,11 @@ button{
 
 .current_res {
 	border: 2px solid;
+}
+
+.page-footer {
+	text-align:center;
+	padding: 40px 0;
+	background: #aedad0;
+	color: #a64922;
 }
